--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -181,7 +181,7 @@
         <div class="bg-white rounded-lg shadow-sm border border-gray-100 p-4 mt-4">
           <h3 class="text-xs font-medium text-gray-700 mb-3">Quick Tech Stack Tags</h3>
           <div class="flex flex-wrap gap-2">
-            <% tech_stacks = ["React", "Ruby on Rails", "Python", "Node.js", "AWS", "Vue.js"] %>
+            <% tech_stacks = ["React", "Ruby on Rails", "Next.js", "Svelte", "Node.js", "Vue.js", "Django", "Laravel", "ASP.NET", "Flask", "WordPress", "Shopify", "Python", "AWS"] %>
             <% tech_stacks.each do |tech| %>
               <% is_selected = Array(params[:tech_stacks]).include?(tech) %>
               <%= link_to tech, companies_path(
