--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,9 @@
           <div class="hidden md:flex items-center space-x-6">
             <%= link_to "Companies", companies_path, class: "text-gray-600 hover:text-blue-600 transition-colors" %>
             <% if user_signed_in? %>
+              <% if current_user.admin? %>
+                <%= link_to "Admin Dashboard", admin_dashboard_path, class: "text-gray-600 hover:text-blue-600 transition-colors" %>
+              <% end %>
               <% if current_user.admin? || current_user.company_owner? %>
                 <%= link_to "Add Company", new_admin_company_path, 
                             class: "px-4 py-2 bg-green-600 text-white rounded-lg hover:bg-green-700 transition-colors" %>
